Fix mobile nav container z-index covering up some links

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3910,9 +3910,15 @@ input, select, textarea {
 			height: auto;
 			width: auto;
 			align-items: flex-start;
+			z-index: 0;
+		}
+
+		#mobile-menu {
+			z-index: 2;
 		}
 
 		#navbar {
+			z-index: 2;
 			display: flex;
 			flex-direction: column;
 			align-items: flex-start;
